# LingShu

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LingShu.entitlements  NOTICE  Package.swift  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  验收结果.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml
.lingshu-e2e-output/: context_assembly_probe.txt  delivery_mode_probe.txt
AppBundle/: build_app.sh
Docs/: AGI_GAP_ANALYSIS.md  ANCS-iPhone-bridge-plan.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  BERT_VITS2_TTS_HANDOFF.md  CLI.md  CLOUD_GATEWAY.md  COMMUNITY_LAUNCH_PACK.md  EMBEDDED_MAKER_RUNTIME.md  FIRST_RUN_PERMISSION_TROUBLESHOOTING.md  GITHUB_ANNOUNCEMENT.md  LAUNCH_KIT.md  LOCAL_ASR_RUNTIME.md  OPEN_SOURCE_BASELINE.md  OPEN_SOURCE_FIRST_ISSUES.md  OPEN_SOURCE_OPERATIONS.md  PERCEPTION_AUDIT.md  PERCEPTION_ENDPOINTS.md  PLUGIN_SDK.md  PROMOTION_CAMPAIGN.md  ROADMAP.md  WINDOWS.md  九站核心链路与验收标准.md  回归_打断恢复不变量泄漏_7a6744f.md  对标前沿Agent_harness追平方案.md  架构速查手册.md  灵枢内核ABI.md  灵枢调优学习大纲.md  能力分层与知识驱动架构方案.md  调优第③站_分诊与验收边界_讲义与方案.md  通用AI中枢推进方案.md
LingShuApp.xcodeproj/: project.pbxproj
ManualApp/: App.swift  Info.plist
Resources/: LingShuMac-Info.plist
Runtime/Grok/crates/codegen/lingshu-grok-runtime/: Cargo.toml
Runtime/Grok/crates/codegen/lingshu-grok-runtime/src/: kernel_host.rs  lib.rs
Runtime/LingShuCore/: Cargo.toml
Runtime/LingShuCore/resources/: kernel-contract.json
Runtime/LingShuCore/src/: artifacts.rs  contract.rs  engine.rs  lib.rs  model_client.rs  models.rs  plugins.rs  preview.rs  providers.rs  store.rs
Scripts/: build-app.sh  build-grok-runtime.sh  build-pages.sh  e2e_harness.py  hub-soak.sh  install-sensevoice.sh  jarvis-soak.sh  lingshu-product-baseline.py  lk-scenario-validate.py  make-test-image.swift  mock-mcp-stdio.py  mock-takeout-server.py  prep-icons.sh  regression-baseline.sh  release-website.sh  run-tests.sh  smoke-clean-user-dmg.sh  smoke-e2e.sh  soak-e2e.sh
Sources/: LingShuAgentLoop.swift  LingShuAgentOrchestrator.swift  LingShuAgentRuntime.swift  LingShuAgentScheduler.swift  LingShuCapabilityProvider.swift  LingShuCapabilityRole.swift  LingShuConcurrencyManager.swift  LingShuExecutionConsoleView.swift  LingShuExecutionCoordinator.swift  LingShuExternalAgentGateway.swift  LingShuExternalAgentRegistry.swift  LingShuGatewayAgentModel.swift  LingShuHeartbeatPolicy.swift  LingShuLocalIntentResolver.swift  LingShuMac.swift  LingShuMainThreadRuntime.swift  LingShuMemoryRepository.swift  LingShuModelChannel.swift  LingShuModelGateway.swift  LingShuNestedAgentSession.swift  LingShuPermissionMatrix.swift  LingShuPermissionPolicy.swift  LingShuRemoteConnectionHealth.swift  LingShuRemoteModelClient.swift  LingShuRemoteSessionPool.swift  LingShuRoutePlanner.swift  LingShuSelfInspection.swift  LingShuTaskExecutionJournal.swift  LingShuTaskPlan.swift  LingShuTaskRuntimeCoordinator.swift  LingShuTaskSegmentation.swift  LingShuTaskSegmenter.swift  LingShuTaskThread.swift
SourcesCLI/: LingShuCLI.swift
SourcesCLIKit/: LingShuCLIClient.swift
WindowsApp/: README.md  index.html  (+3 more)
WindowsApp/src-tauri/: Cargo.toml  tauri.conf.json
WindowsApp/src-tauri/capabilities/: default.json
WindowsApp/src-tauri/src/: lib.rs  main.rs
(+715 files in other folders)
