[package]
name = "lingshu-grok-runtime"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "In-process Grok-derived agent runtime bridge for LingShu"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = { workspace = true }
lingshu-runtime-core = { path = "../../../../LingShuCore" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
xai-grok-shell = { path = "../xai-grok-shell" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
